--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "clsx": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "next": "13.4.4",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
