--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.12",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -24,6 +27,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
+    "react-simple-star-rating": "^5.1.7",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
