--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-simple-star-rating": "^5.1.7",
