--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.7",
     "react-simple-star-rating": "^5.1.7",
+    "react-text-mask": "^5.5.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
