--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.9.0",
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.7",
+    "react-scroll": "^1.8.9",
     "react-simple-star-rating": "^5.1.7",
     "react-text-mask": "^5.5.0",
     "redux-persist": "^6.0.0",
@@ -38,6 +39,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-scroll": "^1.8.7"
   }
 }
